--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^1.3.4",
     "dayjs": "^1.11.7",
+    "js-base64": "^3.7.6",
     "notiflix": "^3.2.6",
     "pdfmake": "^0.2.7",
     "remixicon": "^2.5.0",
